--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive football</title>
+    <title>responsive-football</title>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/092075b8c6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <section class="Top-banner container">
+        <div class="section-title">
+            <h1>Conmebol </h1>
+            <h1>Copa America
+            <h1>2021</h1>
+            <a href="">Watch live<i class="fas fa-arrow-right"></i></a>
+        </div>
+        <div class="section-image">
+            <img src="images/banner.png" alt="">
+        </div>
+    </section>
+
     
+
 </body>
 </html>
