font-family-changed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
             <img src="images/banner.png" alt="">
         </div>
     </section>
-
+    <section class="Top-players container">
+        <article class="players">
+            <div class="player-image">
+                <img src="images/players/player-1.png" alt="">
+            </div>
+            <div class="player-details">
+                <h1 class="player-name">Ishaque</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+            </div>
+        </article>
+    </section>
     
 
 </body>
