--- a/index.html
+++ b/index.html
@@ -23,16 +23,115 @@
     </section>
     <section class="Top-players container">
         <article class="players">
-            <div class="player-image">
-                <img src="images/players/player-1.png" alt="">
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
             </div>
-            <div class="player-details">
-                <h1 class="player-name">Ishaque</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                    <h1 class="player-name">Ishaque</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
             </div>
         </article>
     </section>
-    
-
 </body>
 </html>
