--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
         <article class="players">
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-details">
+                        <h1 class="player-name">Ishaque</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-image">
+                    <img src="images/players/player-2.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -34,7 +43,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-3.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -43,7 +52,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-4.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -52,7 +61,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-5.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -61,7 +70,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-6.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -70,7 +79,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-7.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -79,7 +88,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-8.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -88,7 +97,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-9.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -97,7 +106,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-10.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -106,7 +115,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-11.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
@@ -115,16 +124,7 @@
             </div>
             <div class="player">
                 <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-12.png" alt="">
                 </div>
                 <div class="player-details">
                     <h1 class="player-name">Ishaque</h1>
