--- a/index.html
+++ b/index.html
@@ -21,117 +21,73 @@
             <img src="images/banner.png" alt="">
         </div>
     </section>
+
     <section class="Top-players container">
         <article class="players">
-            <div class="player">
-                <div class="player-image">
-                        <img src="images/players/player-1.png" alt="">
+            <div class="frame">
+                <div class="player">
+                    <div class="player-image">
+                            <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="player-details">
+                            <h1 class="player-name">Ishaque</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                    </div>
                 </div>
-                <div class="player-details">
+            </div>
+            <div class="frame">
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="player-details">
                         <h1 class="player-name">Ishaque</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                    </div>
                 </div>
             </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-2.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-3.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+            <div class="frame">
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h1 class="player-name">Ishaque</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                    </div>
                 </div>
             </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-4.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-5.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+            <div class="frame">
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-4.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h1 class="player-name">Ishaque</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                    </div>
                 </div>
             </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-6.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-7.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+            <div class="frame">
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-5.png" alt="">
+                    </div>
+                    <div class="player-details">
+                        <h1 class="player-name">Ishaque</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+                    </div>
                 </div>
             </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-8.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-9.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-10.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-11.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-image">
-                    <img src="images/players/player-12.png" alt="">
-                </div>
-                <div class="player-details">
-                    <h1 class="player-name">Ishaque</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
-                </div>
-            </div>
-        </article>
-    </section>
+<div class="frame">
+    <div class="player">
+        <div class="player-image">
+            <img src="images/players/player-6.png" alt="">
+        </div>
+        <div class="player-details">
+            <h1 class="player-name">Ishaque</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+        </div>
+    </div>
 </body>
 </html>
