--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <section class="Top-banner container">
+
+    <!-- Top-banner Start -->
+    <section class="Top-banner">
         <div class="section-title">
             <h1>Conmebol </h1>
             <h1>Copa America
@@ -21,8 +23,9 @@
             <img src="images/banner.png" alt="">
         </div>
     </section>
-
-    <section class="Top-players container">
+    <!-- Top-banner-end -->
+<!-- Player-Section-Start -->
+    <section class="Top-players">
         <article class="players">
             <div class="frame">
                 <div class="player">
@@ -30,7 +33,7 @@
                             <img src="images/players/player-1.png" alt="">
                     </div>
                     <div class="player-details">
-                            <h1 class="player-name">Ishaque</h1>
+                            <h1 class="player-name">Neimar</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
                     </div>
                 </div>
@@ -41,7 +44,7 @@
                         <img src="images/players/player-2.png" alt="">
                     </div>
                     <div class="player-details">
-                        <h1 class="player-name">Ishaque</h1>
+                        <h1 class="player-name">Messi</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
                     </div>
                 </div>
@@ -52,7 +55,7 @@
                         <img src="images/players/player-3.png" alt="">
                     </div>
                     <div class="player-details">
-                        <h1 class="player-name">Ishaque</h1>
+                        <h1 class="player-name">Ronaldo</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
                     </div>
                 </div>
@@ -63,7 +66,7 @@
                         <img src="images/players/player-4.png" alt="">
                     </div>
                     <div class="player-details">
-                        <h1 class="player-name">Ishaque</h1>
+                        <h1 class="player-name">Paulo Dybala</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
                     </div>
                 </div>
@@ -74,7 +77,7 @@
                         <img src="images/players/player-5.png" alt="">
                     </div>
                     <div class="player-details">
-                        <h1 class="player-name">Ishaque</h1>
+                        <h1 class="player-name">Mesut Ozil </h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
                     </div>
                 </div>
@@ -85,9 +88,58 @@
             <img src="images/players/player-6.png" alt="">
         </div>
         <div class="player-details">
-            <h1 class="player-name">Ishaque</h1>
+            <h1 class="player-name">Mauro Icardi</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
         </div>
     </div>
+        </div>
+<div class="frame">
+    <div class="player">
+        <div class="player-image">
+            <img src="images/players/player-7.png" alt="">
+        </div>
+        <div class="player-details">
+            <h1 class="player-name">Di Maria</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+        </div>
+    </div>
+        </div>
+<div class="frame">
+    <div class="player">
+        <div class="player-image">
+            <img src="images/players/player-8.png" alt="">
+        </div>
+        <div class="player-details">
+            <h1 class="player-name">Kylian Mbappé</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+        </div>
+    </div>
+        </div>
+<div class="frame">
+    <div class="player">
+        <div class="player-image">
+            <img src="images/players/player-9.png" alt="">
+        </div>
+        <div class="player-details">
+            <h1 class="player-name">Mohamed Salah</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur em ipsum dolor sit amet consectetur adipisicing elit. Ea nihil cumque voluptas animi consectetur</p>
+        </div>
+    </div>
+</div>
+</section>
+<!-- player-section end -->
+
+<!-- logo-section -->
+<footer class="logo-icon">
+    <div class="logo">
+        <img src="images/Logo.png" alt="">
+        <a href=""><i class="fab fa-instagram social"></i></a>    
+        <a href=""><i class="fab fa-dribbble social"></i></a>   
+        <a href=""><i class="fab fa-twitter social"></i></a>    
+        <a href=""><i class="fab fa-youtube social"></i></a>      
+        <p>Copyright&copy;2022 Football</p>
+    </div>
+</footer>
+<!-- logo-section -->
 </body>
 </html>
